--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - app
 
   mysql:
-    image: mysql:8.3
+    image: mysql:8.4
     container_name: ${COMPOSE_PROJECT_NAME}_mysql
     environment:
       # MYSQL_DATABASE: laravel
@@ -47,7 +47,7 @@ services:
       - db-data:/var/lib/mysql
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin:5.2.2
     container_name: ${COMPOSE_PROJECT_NAME}_phpmyadmin
     environment:
       PMA_HOST: mysql
